# robocar

./: .gitignore  empty.txt  pyproject.toml  requirements.txt
Applications/: face_tracking_servo.py
Applications/control/: config.py  led.py  object_track.py  servo.py
Control/: data.py  motor.py  servo.py
control/: config.py  motor.py  object_track.py  pid.py  servo.py  ultrasound_range.py
