[tool.poetry]
name = "robocar"
version = "0.1.0"
description = "Re-writing of FreeNove Robotic Car package"
authors = ["Adam Wickenden"]
readme = "README.md"
packages = [{include = "control"}]

[tool.poetry.dependencies]
python = "^3.11"
pathlib = "^1.0.1"
imutils = "^0.5.4"
adafruit-circuitpython-busdevice = "^5.2.9"
adafruit-circuitpython-motor = "^3.4.13"
adafruit-circuitpython-pca9685 = "^3.4.15"
adafruit-circuitpython-pypixelbuf = "^2.2.8"
adafruit-circuitpython-register = "^1.9.18"
adafruit-circuitpython-servokit = "^1.3.17"
opencv-contrib-python = "^4.9.0.80"
rpi-gpio = "^0.7.1"
rpi-ws281x = "^5.0.0"
picamera2 = "^0.3.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
